# webserver-from-scratch

./: .gitignore  CMakeLists.txt  Makefile  README.md  conanfile.txt  index.html  main.cpp  socket.c  socket.cpp  socket.h  util.cpp
client/: client-test.cpp  client.c  client.cpp  client.h
core/: logger.h  server.cpp  server.h  socket.cpp  socket.h  socket.hpp  threadpool.h
http/: header.h  http.h  request.h  response.h
logger/: logger.h
models/: dispatch_queue.h  join_threads.h  joining_threads.h  lock_free_queue.h  lockfree_threadpool.h  threadpool.h  threadsafe_queue.h  threadsafe_threadpool.h  work_stealing_queue.h  workstealing_threadpool.h
routes/: admin.cpp  general.cpp
